# InjectItx64

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
LIB_INVADER/: AnsiString.cpp  ArgUtils.cpp  EnumLoadReason.h  ErrorUtils.cpp  GDI_HANDLE_BUFFER.h  GetOpenedHandles.h  GetPEBContent.cpp  GetPEBContent.h  HandleProcessInformation.cpp  IMAGE_NT_HEADERS.h  Injector.cpp  KeyNameInformation.h  NTStatus.h  PEBContent.cpp  PEBContent.h  PROCESSINFOCLASS.h  PoolType.h  ProcessBasicInformation.h  ProcessModule.cpp  QueryProcessInformation.cpp  RegUtils.cpp  RtlDriveLetterCurdirContent.h  SystemInformationClass.h  SystemProcessInformation.h  UnicodeString.cpp  UnicodeString.h  _LDR_DLL_LOAD_REASON.h  _PEB_LDR_DATA.h
src/: LoadLibraryInMem.asm  main.cpp
src/LIB_INVADER/: AnsiString.cpp  AnsiString.h  ArgUtils.h  CurdirContent.h  DebugPrivileges.cpp  DebugPrivileges.h  ErrorUtils.h  GetModules.cpp  GetProcessInformation.h  GetProcessModuleList.cpp  GetProcessModuleList.h  Injector.cpp  Injector.h  NtCreateThread.cpp  NtCreateThread.h  ObjectNameInformation.h  ObjectTypeInformation.h  PPVOID.h  ProcessInformation.h  ProcessModule.h  ProcessUtils.cpp  ProcessUtils.h  QueryOpenedFiles.cpp  RegUtils.cpp  RegUtils.h  UnicodeString.cpp  _RTL_BALANCED_NODE.h
